# colour_predicting_application

./: APPLICATION_FLOW.md  README.md  main.py  pyproject.toml
app/agents/: requirements_agent.py  requirements_graph.py
app/agents/prompts/: __init__.py  requirements_agent.py
app/agents/response_models/: __init__.py  requirements_agent.py
app/agents/tools/: README_testing.md  __init__.py  colour_model.py  test_colour_model.py
app/api/: main.py
app/core/: config.py  llm.py
app/ml_models/: colour_changing_predictor (2).ipynb  cotton_dyeing_dataset_1000_samples.csv
static/: index.html
